--- a/src/main/webapp/local.xhtml
+++ b/src/main/webapp/local.xhtml
@@ -3,13 +3,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets">
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
   
   <h:head>
     <title>Manutenção de Locais</title>
   </h:head>
   <h:body>
     <h:form>
+      <p:messages id="messages" showDetail="true" autoUpdate="true"/>
       <h:panelGrid columns="2">
         Código:
         <h:inputText value="#{LocalMB.local.id}" />
@@ -18,7 +20,6 @@
         
         <h:commandButton value="Salvar" action="#{LocalMB.cadastrarLocal()}" />
       </h:panelGrid>
-      <h:messages id="messages" showDetail="true" />
     </h:form>
   </h:body>
 </html>
